Remove browsing support

--- a/bld/docker/Dockerfile.debian-jessie.slim
+++ b/bld/docker/Dockerfile.debian-jessie.slim
@@ -10,5 +10,4 @@ RUN \
             cmake \
             libssl-dev \
             valgrind \
-            libglib2.0-dev \
-            libavahi-client-dev
+            libglib2.0-dev
